Fixed the expected outputs of build-simple integration test.

--- a/test/integration/fixtures/build-simple-expected/unbundled-uncompiled/index.html
+++ b/test/integration/fixtures/build-simple-expected/unbundled-uncompiled/index.html
@@ -1,6 +1,6 @@
-<html><head><link rel="import" href="./foo.html">
+<link rel="import" href="./foo.html">
 
-</head><body><div>hello world</div>
+<div>hello world</div>
 
 <script>
   class Foo extends HTMLElement {
@@ -8,4 +8,3 @@
   }
 
 </script>
-</body></html>
