--- a/test/integration/fixtures/build-with-preset/source/index.html
+++ b/test/integration/fixtures/build-with-preset/source/index.html
@@ -1,3 +1,4 @@
+<script src="webcomponentsjs/webcomponents-loader.js"></script>
 <link rel="import" href="./foo.html">
 <link rel="import" href="./baz.html">
 <div>hello world</div>
