--- a/test/integration/fixtures/polymer-2-project/expected/default/index.html
+++ b/test/integration/fixtures/polymer-2-project/expected/default/index.html
@@ -1,7 +1,7 @@
 <div hidden="" by-polymer-bundler=""><!-- polymer code goes here --><dom-module id="my-element" assetpath="src/elements/">
   <template>
     <style>
-      :host { background-image: url("bg.png"); }
+      :host { background-image: url('bg.png'); }
     </style>
   </template>
 </dom-module><my-element></my-element>
