Make polymer-cli honor the 'excludes' set for minify/compile options in build command.

--- a/src/test/integration/fixtures/build-simple/expected/unbundled-uncompiled/foo.html
+++ b/src/test/integration/fixtures/build-simple/expected/unbundled-uncompiled/foo.html
@@ -3,6 +3,7 @@ class Foo extends HTMLElement {
 }
 </script>
 <script src="foo.js"></script>
+<script src="bar.js"></script>
 <template>
   I'm foo.html!
 </template>
