--- a/src/test/integration/fixtures/build-simple/expected/unbundled-uncompiled/index.html
+++ b/src/test/integration/fixtures/build-simple/expected/unbundled-uncompiled/index.html
@@ -3,3 +3,10 @@
 <link rel="import" href="./foo.html">
 
 <div>hello world</div>
+
+<script>
+  (function () {
+    alert('index IIFE');
+  })();
+</script>
+  
