--- a/src/test/integration/fixtures/build-simple/source/foo.html
+++ b/src/test/integration/fixtures/build-simple/source/foo.html
@@ -2,6 +2,8 @@
 class Foo extends HTMLElement {
 }
 </script>
+<script src="foo.js"></script>
+<script src="bar.js"></script>
 <template>
   I'm foo.html!
 </template>
