Integrate module bundling and AMD transform into CLI.

--- a/src/test/integration/fixtures/build-modules/expected/unbundled-es/index.html
+++ b/src/test/integration/fixtures/build-modules/expected/unbundled-es/index.html
@@ -1,6 +1,6 @@
-<html>
-  <head>
+<html><head>
     <script type="module" src="./mod1.js"></script>
   </head>
-  <body></body>
-</html>
+  <body>
+
+</body></html>
