Do minify and other things after bundling instead of before.

--- a/src/test/integration/fixtures/polymer-2-project/expected/default/index.html
+++ b/src/test/integration/fixtures/polymer-2-project/expected/default/index.html
@@ -1,4 +1,5 @@
-<div hidden="" by-polymer-bundler=""><!-- polymer code goes here --><dom-module id="my-element" assetpath="src/elements/">
+<div hidden="" by-polymer-bundler=""><!-- polymer code goes here -->
+<dom-module id="my-element" assetpath="src/elements/">
   <template>
     <style>
       :host { background-image: url('bg.png'); }
